2.Kube-manifest-open-telemetry-AWS-RDS/app_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-eks-test-deployment
spec:
  replicas: 4 
  selector:
    matchLabels:
      app: aws-eks-test
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-python: 'monitoring/python-instrumentation'
        #sidecar.opentelemetry.io/inject: 'true'
      name: aws-eks-test-pod
      labels:
        app: aws-eks-test
    spec:
      serviceAccountName: s3-access-sa
      containers:
        - name: aws-eks-test-container
          image: ramguguloth/test3:v1.0
          ports:
            - containerPort: 8000
