2.Kube-manifest-open-telemetry-AWS-RDS/mysql_externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  type: ExternalName
  externalName: job.c0bwycci6cnk.us-east-1.rds.amazonaws.com
  ports:
    - port: 3306
