2.Kube-manifest-open-telemetry-AWS-RDS/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
  labels:
    app: application-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: application-ingress-rules
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/healthcheck-protocol: HTTP  
    #alb.ingress.kubernetes.io/healthcheck-port: traffic-port   
    #alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    #alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    #alb.ingress.kubernetes.io/success-codes: '200'
    #alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    #alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'  
spec:
  ingressClassName: my-aws-ingress-class # Ingress Class
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aws-eks-test-nodeport #prometheus-nodeport
              port:
                number: 8000 #9090
